src/test/error/macro7.lns
{
   macro _Test() {
      {
         __var.val = 1;
      }
   }
   _Test();
   fn func() {
      _Test(); // error
   }
}
pub macro _Test() {
   {
      __var.val = 1; // error
   }
}
